--- a/style.less
+++ b/style.less
@@ -27,6 +27,10 @@
     cursor: pointer;
 }
 
+.button:hover {
+    box-shadow: 0px 4px 15px rgba(27, 170, 235, 0.45);
+}
+
 .modal {
     overflow: auto;
     width: 440px;
@@ -156,6 +160,10 @@ header {
     .button()
 }
 
+.header__content-btn:hover {
+    box-shadow: 0px 4px 15px rgba(27, 170, 235, 0.45);
+}
+
 // ABOUT US
 
 .about-us {
@@ -185,6 +193,10 @@ header {
 
 .about-us__btn {
     .button();
+}
+
+.about-us__btn:hover {
+    box-shadow: 0px 4px 15px rgba(27, 170, 235, 0.45);
 }
 
 // STEPS
@@ -237,6 +249,10 @@ header {
 
 .send__btn {
     .button();
+}
+
+.send__btn:hover {
+    box-shadow: 0px 4px 15px rgba(27, 170, 235, 0.45);
 }
 
 // CALL US
@@ -293,6 +309,10 @@ header {
     margin-bottom: 16px;
     background: @yellow;
     color: @black;
+}
+
+.call-us__form-btn:hover {
+    box-shadow: 0px 4px 20px rgba(255, 204, 0, 0.55);
 }
 
 .call-us__form-label {
@@ -480,6 +500,10 @@ header {
     .button();
 }
 
+.guarantees__item-btn:hover {
+    box-shadow: 0px 4px 15px rgba(27, 170, 235, 0.45);
+}
+
 // FAQ
 
 .faq {
@@ -605,6 +629,10 @@ hr {
 
 .footer__form-btn {
     .button()
+}
+
+.footer__form-btn:hover {
+    box-shadow: 0px 4px 15px rgba(27, 170, 235, 0.45);
 }
 
 .footer__bot {
