--- a/style.less
+++ b/style.less
@@ -643,6 +643,69 @@ hr {
     cursor: pointer;    
 }
 
+@media(max-width: 1438px) {
+    header {
+        width: 100vw;
+    }
+
+    section {
+        width: 100vw;
+    }
+
+    .container {
+        width: 90%;
+    }
+
+    .header__top {
+        justify-content: space-around;
+    }
+    .guarantees__item {
+        width: 30%;
+    }
+
+    .guarantees__item-btn {
+        width: 100%;
+    }
+
+    footer {
+        width: 100vw;
+    }
+}
+
+@media(max-width: 1188px) {
+
+    .container {
+        width: 95%;
+    }
+
+    .about-us__img {
+        width: 50%;
+    }
+
+    .about-us__img img {
+        width: 100%;
+    }
+
+    .about-us__content {
+        width: 50%;
+    }
+}
+
+@media(max-width: 1049px) {
+    .nav__block li {
+        margin-right: 20px;
+    }
+
+    .steps__item img {
+        width: 100%;
+    }
+
+    .item__logo {
+        width: 100px;
+        height: 100px;
+    }
+}
+
 
 @media(max-width: 769px) {
     body {
@@ -822,7 +885,7 @@ hr {
 
 }
 
-@media(max-width: 375px) {
+@media(max-width: 376px) {
     header {
         background-image: url(img/mob-bg-header.jpg);
         background-repeat: no-repeat;
@@ -914,6 +977,14 @@ hr {
     //     font-size: 20px;
     // }
 
+    .guarantees {
+        display:none;
+    }
+
+    .footer__box-1st {
+        display:none;
+    }
+        
 
 
 }
