--- a/style.css
+++ b/style.css
@@ -680,13 +680,20 @@ hr {
   .call-us__text-p {
     font-size: 14px;
   }
+  .call-us__form {
+    width: 100%;
+  }
   .call-us__form-input {
-    width: 279px;
+    width: 100%;
     height: 48px;
   }
   .call-us__form-btn {
-    width: 279px;
+    width: 100%;
     height: 48px;
+    font-size: 14px;
+  }
+  .call-us__form-label {
+    display: none;
   }
   .advantages__items {
     flex-wrap: wrap;
@@ -734,14 +741,20 @@ hr {
     justify-content: space-around;
   }
   .footer__form-input {
-    width: 220px;
+    width: 47%;
     margin-right: 10px;
   }
   .footer__form-btn {
-    width: 190px;
+    width: 47%;
   }
   .footer__text-h2 {
     font-size: 25px;
+  }
+  .footer__box-2d {
+    display: none;
+  }
+  .modal {
+    width: 90%;
   }
 }
 @media (max-width: 730px) {
@@ -770,6 +783,17 @@ hr {
   }
   .footer__bot p:last-child {
     display: none;
+  }
+}
+@media (max-width: 410px) {
+  .modal__content-form {
+    width: 100%;
+  }
+  .modal__content-form input {
+    width: 95%;
+  }
+  .modal__content-form button {
+    width: 95%;
   }
 }
 @media (max-width: 376px) {
