--- a/style.less
+++ b/style.less
@@ -820,14 +820,23 @@ hr {
         font-size: 14px;
     }
 
+    .call-us__form {
+        width: 100%;
+    }
+
     .call-us__form-input {
-        width: 279px;
+        width: 100%;
         height: 48px;
     }
 
     .call-us__form-btn {
-        width: 279px;
+        width: 100%;
         height: 48px;
+        font-size: 14px;
+    }
+
+    .call-us__form-label {
+        display: none;
     }
 
     // ADVANTAGES
@@ -897,16 +906,26 @@ hr {
     }
 
     .footer__form-input {
-        width: 220px;
+        width: 47%;
         margin-right: 10px;
     }
 
     .footer__form-btn {
-        width: 190px;
+        width: 47%;
     }
 
     .footer__text-h2 {
         font-size: 25px;
+    }
+
+    .footer__box-2d {
+        display: none;
+    }
+
+    // MODAL 
+
+    .modal {
+        width: 90%;
     }
 
 
@@ -947,6 +966,20 @@ hr {
 
     .footer__bot p:last-child {
         display: none;
+    }
+}
+
+@media(max-width: 410px) {
+
+    .modal__content-form {
+        width: 100%;
+    }
+    .modal__content-form input {
+        width: 95%;
+    }
+
+    .modal__content-form button {
+        width: 95%;
     }
 }
 
